# hecaton

./: .coverage  .env  .gitignore  README.md  create_db_test.py  hecaton-client  hecaton-gpu  hecaton-server  help.txt  pyproject.toml  requirements.txt  verify_auth_flow.py  verify_user_creation.py
.github/workflows/: publish.yml  quality.yml
client/: cli.py
client/managers/: __init__.py  api.py  db.py  image.py  job.py  server.py
example/: Dockerfile  example_payload.json  handler.py
gpu/: argparser.py
hecaton/: serverless.py
hecaton/client/: argparser.py  cli.py
hecaton/client/managers/: __init__.py  api.py  db.py  image.py  job.py  server.py  user.py  worker.py
hecaton/gpu/: argparser.py  docker_manager.py  main.py  utils.py  web_client.py  worker.py
hecaton/server/: argparser.py  auth.py  dto.py  main.py  worker.py
server/: dto.py  main.py  worker.py
tests/: test_auth.py  test_client_api.py  test_docker_runner.py  test_sqlite_queue.py  test_worker_runner.py
