[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hecaton"
version = "0.6.9"
description = "Hecaton distributed compute framework"
authors = [{ name = "Just1duc", email = "aworld068@gmail.com" }]
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    "fastapi",
    "uvicorn",
    "platformdirs",
    "typer",
    "prompt_toolkit",
    "click",
    "docker",
    "python-dotenv",
    "python-jose",
    "passlib",
    "fastapi-utilities",
    "python-multipart"
]

[project.optional-dependencies]
dev = [
    "ruff",
    "mypy",
    "pytest",
    "pytest-cov",
    "types-requests",
    "types-setuptools",
    "types-docker",
    "types-python-jose",
    "types-passlib"
]

[tool.ruff]
target-version = "py39"
line-length = 88
exclude = ["build", "dist", ".venv"]

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
ignore = []

[tool.mypy]
python_version = "3.9"
ignore_missing_imports = true
check_untyped_defs = true
exclude = ["build/", "dist/"]

[tool.pytest.ini_options]
addopts = "--cov=hecaton --cov-report=term-missing"
testpaths = ["tests"]

[project.scripts]
hecaton-cli = "hecaton.client.cli:main"
hecaton-gpu = "hecaton.gpu.main:main"
hecaton-server = "hecaton.server.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["hecaton*"]

[tool.setuptools.package-data]
hecaton = ["*.txt"]
